add count route to modules
