# sqlite-logging/routes/log.js
@@ -6,6 +6,7 @@
     const logController = dependencyInjector.inject('logController');
 
     router.get('/log', logController.getLogs);
+    router.get('/log/count', logController.getLogCount);
     router.get('/log/:id', logController.getSpecificLog);
 
     module.exports = router;
